feat: Add recend verification code endpoint
